More changes to PCOM's Makefile

--- a/etc/pcom/Makefile
+++ b/etc/pcom/Makefile
@@ -40,6 +40,10 @@ authorities: $(in)/Auth*mrc
 	cd $(wd)/auth; ./marc2auth010.pl $(wd)/mapping_rules/marc_authority_rules.json $(iref) $(adir)/auth.mrc > $(log)/makeAuth.log &
 	tail -f $(log)/makeAuth.log
 
+split-authorities: $(adir)/auth-authorities.jsonl
+	cd $(adir); split -l 11000 auth-authorities.jsonl aa
+	cd $(adir); split -l 11000 auth-srs.jsonl as
+
 clean-authorities: $(adir)/auth.mrc
 	cd $(adir); rm *.mrc
 
