Change PCOM Makefile to production.

--- a/etc/pcom/Makefile
+++ b/etc/pcom/Makefile
@@ -3,7 +3,7 @@ user=charles
 home=/home/$(user)
 wd=$(home)/folio-import
 inv2=$(wd)/inventory2
-login=$(wd)/configs/json/pcom-test.json
+login=$(wd)/configs/json/pcom.json
 data=$(home)/$(lib)
 ref=$(data)/ref
 iref=$(ref)/inv
