--- a/etc/nls/Makefile-kb
+++ b/etc/nls/Makefile-kb
@@ -6,10 +6,13 @@ con=$(inv2)/conf/nls-kb.json
 ldir=$(data)/log
 
 instances:
-	cd $(inv2); node marc2inst-nls.js $(con) $(idir)/bibs.mrc > $(ldir)/makeInst.log &
+	cd $(inv2); node marc2inst-nls.js $(con) $(idir)/bibs.mrc > $(ldir)/makeInst.log 2>makeInst.err &
 
 suppress-inst:
 	cd $(inv2); node suppressInst-nls.js "$(idir)/bibs-suppress.jsonl"
+
+items:
+	cd $(inv2); node --max-old-space-size=4096 holdingsItems-nls.js $(con) $(idir)/bibs.map > $(ldir)/makeHoldingsItems.log 2>$(ldir)/makeHoldingsItems.err &
 
 inventory-prep:
 	cd $(idir); cat bibs-xholdings.jsonl >> bibs-holdings.jsonl
