More updates to Grolier's Makefile

--- a/etc/grolier/Makefile
+++ b/etc/grolier/Makefile
@@ -34,8 +34,9 @@ items: $(in)/*Items*xlsx
 clean-inventory:
 	cd $(idir); rm *.marc *.mrc *.csv count*
 
-authorities: $(in)/Auth*mrc
-	cd $(adir); ln -s $(in)/Auth*.mrc auth.mrc
+authorities: $(in)/*Auths*.mrc
+	cd $(adir); rm -r auth.raw; ln -s $(in)/*Auths*.mrc auth.raw
+	yaz-marcdump -f marc8 -t utf8 -l 9=97 -o marc $(adir)/auth.raw > $(adir)/auth.mrc
 	cd $(wd)/auth; ./marc2auth010.pl $(wd)/mapping_rules/marc_authority_rules.json $(iref) $(adir)/auth.mrc > $(log)/makeAuth.log &
 	tail -f $(log)/makeAuth.log
 
