Update ref data

--- a/etc/nls/Makefile-kb
+++ b/etc/nls/Makefile-kb
@@ -3,7 +3,7 @@ data=/data/konchaled
 ref=$(data)/ref
 uref=$(ref)/usr
 iref=$(ref)/inv
-idir=$(data)/big
+idir=$(data)/inv
 udir=$(data)/users
 inv2=$(wd)/inventory2
 con=$(inv2)/conf/nls-kb.json
