Add user notes to stats

--- a/etc/steu/Makefile
+++ b/etc/steu/Makefile
@@ -5,7 +5,7 @@ wd=$(home)/folio-import
 etc=$(wd)/etc/$(lib)
 inv2=$(wd)/inventory2
 conf=$(inv2)/conf/$(lib).json
-login=$(wd)/configs/json/$(lib)-test.json
+login=$(wd)/configs/json/$(lib).json
 data=$(home)/$(lib)
 ref=$(data)/ref
 iref=$(ref)/inv
