--- a/etc/nls/Makefile-kb
+++ b/etc/nls/Makefile-kb
@@ -44,6 +44,6 @@ orders:
 	cd $(acq); node nlsOrders $(oref) $(z103) $(idir)/bibs-instances.jsonl $(odir) > $(ldir)/makeOrders.log
 	cat $(ldir)/makeOrders.log
 
-checkouts:
-	cd $(wd)/patrons; node nlsCheckouts $(iref)/service-points.json $(cdir)/users.jsonl $(cdir)/items.jsonl $(cdir)/z36.dsv > $(ldir)/makeCheckouts.log
-	cat $(ldir)/makeCheckouts.log
+circ:
+	cd $(wd)/patrons; DEBUG=1 node nlsCirc $(iref)/service-points.json $(cdir)/users.jsonl $(cdir)/items.jsonl $(cdir)/z36.dsv $(cdir)/z37.dsv > $(ldir)/makeCirc.log
+	cat $(ldir)/makeCirc.log
