New ref dataNew ref data

--- a/etc/nls/Makefile-kb
+++ b/etc/nls/Makefile-kb
@@ -4,7 +4,7 @@ ref=$(data)/ref
 uref=$(ref)/usr
 iref=$(ref)/inv
 oref=$(ref)/acq
-idir=$(data)/inv
+idir=$(data)/big
 udir=$(data)/users
 odir=$(data)/orders
 cdir=$(data)/circ
