--- a/etc/nls/all-ref/08-configuration/configurations__entries.json
+++ b/etc/nls/all-ref/08-configuration/configurations__entries.json
@@ -66,6 +66,19 @@
       }
     },
     {
+      "id": "147181aa-d1d6-4dae-a60f-5c419471013c",
+      "module": "ORDERS",
+      "configName": "orderNumber",
+      "enabled": true,
+      "value": "{\"canUserEditOrderNumber\":true}",
+      "metadata": {
+        "createdDate": "2025-07-30T18:34:46.839+00:00",
+        "createdByUserId": "80c34dfc-fed7-40b1-94ea-62bfc3c4f487",
+        "updatedDate": "2025-07-30T18:34:46.839+00:00",
+        "updatedByUserId": "80c34dfc-fed7-40b1-94ea-62bfc3c4f487"
+      }
+    },
+    {
       "id": "21034824-1cec-41cd-a6cd-c1acce87e217",
       "module": "OAIPMH",
       "configName": "general",
@@ -100,19 +113,6 @@
         "createdDate": "2023-11-22T13:51:58.051+00:00",
         "createdByUserId": "87497b7b-344c-5fbb-9131-d108b36c767c",
         "updatedDate": "2023-11-22T13:51:58.051+00:00",
-        "updatedByUserId": "87497b7b-344c-5fbb-9131-d108b36c767c"
-      }
-    },
-    {
-      "id": "047e1b2c-e831-4d61-8590-b69ae469f8d7",
-      "module": "ORDERS",
-      "configName": "poLines-limit",
-      "enabled": true,
-      "value": "90",
-      "metadata": {
-        "createdDate": "2023-11-22T13:52:45.747+00:00",
-        "createdByUserId": "87497b7b-344c-5fbb-9131-d108b36c767c",
-        "updatedDate": "2023-11-22T13:52:45.747+00:00",
         "updatedByUserId": "87497b7b-344c-5fbb-9131-d108b36c767c"
       }
     },
@@ -203,6 +203,19 @@
         "createdByUserId": "87497b7b-344c-5fbb-9131-d108b36c767c",
         "updatedDate": "2025-07-07T13:22:04.182+00:00",
         "updatedByUserId": "aa2615c9-d171-4a44-86a5-fbdf00c76246"
+      }
+    },
+    {
+      "id": "047e1b2c-e831-4d61-8590-b69ae469f8d7",
+      "module": "ORDERS",
+      "configName": "poLines-limit",
+      "enabled": true,
+      "value": "999",
+      "metadata": {
+        "createdDate": "2023-11-22T13:52:45.747+00:00",
+        "createdByUserId": "87497b7b-344c-5fbb-9131-d108b36c767c",
+        "updatedDate": "2025-08-26T13:41:39.101+00:00",
+        "updatedByUserId": "f1f8c668-17eb-49c3-b10d-9a3cd8bb0ef6"
       }
     },
     {
@@ -379,21 +392,21 @@
       }
     },
     {
-      "id": "5632a24e-0832-4ed5-b0ce-d667a331b23f",
+      "id": "7e120b58-7fdc-478c-95d9-fa2cba2fd1ce",
       "module": "BULKEDIT",
       "configName": "statuses",
       "default": true,
       "enabled": true,
       "value": "{\"Available\":[\"Missing\",\"Withdrawn\",\"In process\",\"In process (non-requestable)\",\"Intellectual item\",\"Long missing\",\"Restricted\",\"Unavailable\",\"Unknown\"],\"Long missing\":[\"Available\",\"Missing\",\"Withdrawn\",\"In process (non-requestable)\",\"Intellectual item\",\"Restricted\",\"Unavailable\",\"Unknown\"],\"Missing\":[\"Available\",\"Withdrawn\",\"In process (non-requestable)\",\"Intellectual item\",\"Long missing\",\"Restricted\",\"Unavailable\",\"Unknown\"],\"In process\":[\"Missing\",\"Withdrawn\"],\"In process (non-requestable)\":[\"Available\",\"Missing\",\"Withdrawn\",\"Intellectual item\",\"Long missing\",\"Restricted\",\"Unavailable\",\"Unknown\"],\"Intellectual item\":[\"Available\",\"Missing\",\"Withdrawn\",\"In process (non-requestable)\",\"Long missing\",\"Restricted\",\"Unavailable\",\"Unknown\"],\"Restricted\":[\"Available\",\"Missing\",\"Withdrawn\",\"In process (non-requestable)\",\"Intellectual item\",\"Long missing\",\"Unavailable\",\"Unknown\"],\"Unavailable\":[\"Available\",\"Missing\",\"Withdrawn\",\"In process (non-requestable)\",\"Intellectual item\",\"Long missing\",\"Restricted\",\"Unknown\"],\"Unknown\":[\"Available\",\"Missing\",\"Withdrawn\",\"In process (non-requestable)\",\"Intellectual item\",\"Long missing\",\"Restricted\",\"Unavailable\"],\"Withdrawn\":[\"Available\",\"Missing\",\"In process (non-requestable)\",\"Intellectual item\",\"Long missing\",\"Restricted\",\"Unavailable\",\"Unknown\"]}",
       "metadata": {
-        "createdDate": "2025-04-22T13:21:37.824+00:00",
-        "updatedDate": "2025-04-22T13:21:37.824+00:00"
+        "createdDate": "2025-08-15T07:46:47.055+00:00",
+        "updatedDate": "2025-08-15T07:46:47.055+00:00"
       }
     }
   ],
-  "totalRecords": 28,
+  "totalRecords": 29,
   "resultInfo": {
-    "totalRecords": 28,
+    "totalRecords": 29,
     "facets": [],
     "diagnostics": []
   }
